--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,10 +1,9 @@
-/* Singin */
-
-.fill {
+.fill { 
     min-height: 1em;
-    height: 5em;
+    height: 92vh;
 }
 
+/* Singin */
 .algebreb-header {
     color: #00ADB5;
 }
