--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,54 +1,49 @@
-.fill { 
-    min-height: 1em;
-    height: 92vh;
-}
-
 /* Singin */
 .algebreb-header {
-    color: #00ADB5;
+  color: #00adb5;
 }
 
 .link-algebreb {
-    color: #00ADB5;
+  color: #00adb5;
 }
 
 .link-algebreb:hover {
-    color: #0c9299;
+  color: #0c9299;
 }
 
 .bg-algebreb {
-    background-color: #222831;
+  background-color: #222831;
 }
 
 .bg-btn {
-    background-color: #00ADB5 !important;
-    border: #0a8f96 !important;
+  background-color: #00adb5 !important;
+  border: #0a8f96 !important;
 }
 
 .bg-btn:hover {
-    background-color: #0c9299 !important;
+  background-color: #0c9299 !important;
 }
 
 .form-control:focus {
-    border-color: #00ADB5;
-    -webkit-box-shadow: inset 0 1px 1px #00ADB5, 0 0 2px #00ADB5;
-    box-shadow: inset 0 1px 1px #00ADB5, 0 0 2px #00ADB5;
+  border-color: #00adb5;
+  -webkit-box-shadow: inset 0 1px 1px #00adb5, 0 0 2px #00adb5;
+  box-shadow: inset 0 1px 1px #00adb5, 0 0 2px #00adb5;
 }
 
 .form-select:focus {
-    border-color: #00ADB5;
-    -webkit-box-shadow: inset 0 1px 1px #00ADB5, 0 0 2px #00ADB5;
-    box-shadow: inset 0 1px 1px #00ADB5, 0 0 2px #00ADB5;
+  border-color: #00adb5;
+  -webkit-box-shadow: inset 0 1px 1px #00adb5, 0 0 2px #00adb5;
+  box-shadow: inset 0 1px 1px #00adb5, 0 0 2px #00adb5;
 }
 
 @media (min-width: 768px) {
-    .flex-md-equal>* {
-        flex: 1;
-    }
+  .flex-md-equal > * {
+    flex: 1;
+  }
 }
 
 @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-    }
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
 }
