Estilos de los botones cambiados en grupos y navbar cambiada

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -11,6 +11,11 @@
   color: #eeeeee;
 }
 
+#nav .nav-link:focus{
+  background-color: #00ADB5;
+  color: white;
+}
+
 /* #nav #btn-signup, #btn-signin{
   border-width: 1px;
   border-style: solid;
