--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,25 +1,26 @@
 #nav {
   background-color: #222831;
- /*  margin-bottom: 1.5rem; */
+  /*  margin-bottom: 1.5rem; */
 }
 
 #nav .navbar-brand {
-  color: #00ADB5;
+  color: #00adb5;
 }
 
-#nav .nav-link:hover{
+#nav .nav-link:hover {
   color: #eeeeee;
 }
 
-.nav-item-active{
-  background-color: #00ADB5 !important;
-  color: white !important;
-  position: inherit;
-  bottom: -2em;
-  height: 0.3em;
-  border-radius: 0.5em;
+@media only screen and (min-height: 800px) and (min-width: 800px) {
+  .nav-item-active {
+    background-color: #00adb5 !important;
+    color: white !important;
+    position: inherit;
+    bottom: -2em;
+    height: 0.3em;
+    border-radius: 0.5em;
+  }
 }
-
 /* #nav #btn-signup, #btn-signin{
   border-width: 1px;
   border-style: solid;
